[118087] UDDI custom taxonomies cannot be loaded into the WSExplorer